--- a/src/main/resources/templates/administradores/dashboard.html
+++ b/src/main/resources/templates/administradores/dashboard.html
@@ -28,9 +28,8 @@
     <nav>
       <ul>
         <li><a th:href="@{registroSeguros}">Gestión de Seguros</a></li>
-        <li><a th:href="@{clientes}">Gestión de Clientes</a></li>
-        <li><a th:href="@{polizas}">Gestión de Pólizas</a></li>
-        <li><a th:href="@{pagos}">Gestión de Pagos</a></li>
+        <li><a th:href="@{gestionClientes}">Gestión de Clientes</a></li>
+        <li><a th:href="@{gestionPolizas}">Gestión de Pólizas</a></li>
         <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
       </ul>
     </nav>
