--- a/src/main/resources/templates/administradores/informes.html
+++ b/src/main/resources/templates/administradores/informes.html
@@ -6,7 +6,7 @@
   <title>Informes - SeguriPlus</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" th:href="@{/css/administradores/informes.css}/>
+  <link rel="stylesheet" th:href="@{/css/administradores/informes.css}"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 
@@ -14,12 +14,11 @@
   <aside class="sidebar">
     <nav>
       <ul>
-        <li><a href="dashboard.html">Dashboard</a></li>
-        <li><a href="seguros.html">Seguros</a></li>
-        <li><a href="clientes.html">Clientes</a></li>
-        <li><a href="polizas.html">Pólizas</a></li>
-        <li><a href="pagos.html">Pagos</a></li>
-        <li><a href="informes.html" class="active">Informes</a></li>
+        <li><a th:href="@{dashboard}">Inicio</a></li>
+        <li><a th:href="@{gestionSeguros}">Gestión Seguros</a></li>
+        <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
+        <li><a th:href="@{gestionPolizas}" class="active">Gestión Pólizas</a></li>
+        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
       </ul>
     </nav>
   </aside>
@@ -130,10 +129,10 @@
     </section>
   </main>
   <footer class="bottom-nav">
-    <a href="dashboard.html">Inicio</a>
-    <a href="ayuda.html">Ayuda</a>
-    <a href="contacto.html">Contacto</a>
-    <a href="logout.html">Cerrar sesión</a>
+    <a href="@{dashboard}">Inicio</a>
+    <a href="@{ayuda}">Ayuda</a>
+    <a href="@{contacto}">Contacto</a>
+    <a href="@{logout}">Cerrar sesión</a>
   </footer>
 
   <script th:src="@{/js/informes.js}"></script>
