--- a/src/main/resources/templates/administradores/gestionClientes.html
+++ b/src/main/resources/templates/administradores/gestionClientes.html
@@ -139,8 +139,8 @@
   </main>
   <footer class="bottom-nav">
     <a th:href="@{dashboard}">Inicio</a>
-    <a th:href="@{ayuda}">Ayuda</a>
-    <a th:href="@{contacto}">Contacto</a>
+    <a th:href="@{/clientes/ayuda}">Ayuda</a>
+    <a th:href="@{/clientes/contacto}">Contacto</a>
     <a th:href="@{logout}">Cerrar sesión</a>
   </footer>
 
