--- a/src/main/resources/templates/administradores/informes.html
+++ b/src/main/resources/templates/administradores/informes.html
@@ -130,8 +130,8 @@
   </main>
   <footer class="bottom-nav">
     <a href="@{dashboard}">Inicio</a>
-    <a href="@{ayuda}">Ayuda</a>
-    <a href="@{contacto}">Contacto</a>
+    <a href="@{/clientes/ayuda}">Ayuda</a>
+    <a href="@{/clientes/contacto}">Contacto</a>
     <a href="@{logout}">Cerrar sesión</a>
   </footer>
 
