--- a/src/main/resources/static/css/administradores/gestionPolizas.css
+++ b/src/main/resources/static/css/administradores/gestionPolizas.css
@@ -8,8 +8,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 */
 
 :root{
-  --pri: #5a3a8a;
-  --pri-osc: #402a66;
+  --pri:  #005f99;
+  --pri-osc: #004070;
   --fondo: #f4f6f8;
   --blanco: #ffffff;
   --sombra: 0 2px 8px rgba(0,0,0,.15);
