--- a/src/main/resources/templates/administradores/informes.html
+++ b/src/main/resources/templates/administradores/informes.html
@@ -129,10 +129,10 @@
     </section>
   </main>
   <footer class="bottom-nav">
-    <a href="@{dashboard}">Inicio</a>
-    <a href="@{/clientes/ayuda}">Ayuda</a>
-    <a href="@{/clientes/contacto}">Contacto</a>
-    <a href="@{logout}">Cerrar sesión</a>
+    <a th:href="@{dashboard}">Inicio</a>
+    <a th:href="@{/clientes/ayuda}">Ayuda</a>
+    <a th:href="@{/clientes/contacto}">Contacto</a>
+    <a th:href="@{logout}">Cerrar sesión</a>
   </footer>
 
   <script th:src="@{/js/informes.js}"></script>
