--- a/src/main/resources/templates/administradores/gestionPolizas.html
+++ b/src/main/resources/templates/administradores/gestionPolizas.html
@@ -18,6 +18,7 @@
         <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
         <li><a th:href="@{gestionPolizas}" class="active">Gestión Pólizas</a></li>
         <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+        <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
   </aside>
@@ -25,7 +26,7 @@
 <main class="content">
     <header class="top-bar">
       <h1>Gestión de Pólizas</h1>
-      <a href="dashboard.html">Volver al Dashboard</a>
+      <a th:href="@{dashboard}">Volver al Dashboard</a>
     </header>
 
     <section class="form-section">
@@ -105,21 +106,7 @@
         </div>
       </form>
     </section>
-
-
-    <section class="seguimiento-section">
-      <h2>Seguimiento y control de estados</h2>
-      <p>Cambie el estado de una póliza directamente desde la tabla y especifique motivo si la cancelación es necesaria.</p>
-    </section>
-
-
-    <section class="cert-section">
-      <h2>Generación de certificados</h2>
-      <p>Seleccione una póliza en la tabla y presione "Descargar certificado".</p>
-      <button id="btnCert" disabled>Descargar certificado PDF</button>
-    </section>
-
-
+    
       <section class="table-section">
           <h2>Listado de Pólizas Modelo</h2>
 
@@ -170,9 +157,9 @@
     
   <footer class="bottom-nav">
     <a th:href="@{dashboard}">Inicio</a>
-    <a th:href="@{/clientes/ayuda}">Ayuda</a>
-    <a th:href="@{/clientes/contacto}">Contacto</a>
-    <a th:href="@{logout}">Cerrar sesión</a>
+    <form th:action="@{/perform_logout}" method="post">
+        <input type="submit" value="Cerrar sesión" />
+    </form>
   </footer>
 
 
