--- a/src/main/resources/templates/administradores/registroSeguros.html
+++ b/src/main/resources/templates/administradores/registroSeguros.html
@@ -15,10 +15,11 @@
     <nav>
       <ul>
         <li><a th:href="@{dashboard}">Inicio</a></li>
-        <li><a th:href="@{registroSeguros}">Gestión Seguros</a></li>
+        <li><a th:href="@{registroSeguros}" class="active">Gestión Seguros</a></li>
         <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
-        <li><a th:href="@{gestionPolizas}" class="active">Gestión Pólizas</a></li>
+        <li><a th:href="@{gestionPolizas}" >Gestión Pólizas</a></li>
         <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
+        <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
   </aside>
@@ -27,7 +28,7 @@
   <main class="content">
     <header class="top-bar">
       <h1>Gestión de Seguros</h1>
-      <a href="dashboard.html">Volver al Dashboard</a>
+      <a th:href="@{dashboard}">Volver al Dashboard</a>
     </header>
 
 
@@ -125,9 +126,9 @@
     </section>
 
 
-      <section class="search-section">
-          <h2>Buscar seguros</h2>
-          <form th:action="@{/administradores/registroSeguros}" method="get" class="search-form">
+      <section class="form-section">
+          <h2 id="tituloForm">Buscar seguros</h2>
+          <form id="segurForm" th:action="@{/administradores/registroSeguros}" method="get" class="search-form">
               <input type="text" name="tipo" th:value="${tipo}" placeholder="Tipo de seguro">
               <input type="text" name="cobertura" th:value="${cobertura}" placeholder="Cobertura">
               <input type="number" step="0.01" name="costo" th:value="${costo}" placeholder="Costo exacto">
@@ -194,9 +195,9 @@
 
   <footer class="bottom-nav">
     <a th:href="@{dashboard}">Inicio</a>
-    <a th:href="@{/clientes/ayuda}">Ayuda</a>
-    <a th:href="@{/clientes/contacto}">Contacto</a>
-    <a th:href="@{logout}">Cerrar sesión</a>
+    <form th:action="@{/perform_logout}" method="post">
+        <input type="submit" value="Cerrar sesión" />
+    </form>
   </footer>
 
 
