--- a/src/main/resources/templates/clientes/loginUsuarios.html
+++ b/src/main/resources/templates/clientes/loginUsuarios.html
@@ -14,8 +14,8 @@
                 <circle cx="50" cy="50" r="40" fill="#005f99"/>
                 <text x="50" y="60" text-anchor="middle" fill="white" font-size="40" font-family="Roboto" font-weight="bold"></text>
             </svg>
-            <h1>SegurApp</h1>
-            <h2>Inicio de sesión</h2>
+            <h1>SegurApp</h1><br>
+            <h2>Inicio de sesión</h2><br>
         </div>
         
     <form th:action="@{/perform_login}" method="post" class="login-form">
