--- a/src/main/resources/templates/clientes/compraSeguros.html
+++ b/src/main/resources/templates/clientes/compraSeguros.html
@@ -93,7 +93,7 @@
     <div class="total-carrito">
         <strong>Total: $<span id="totalCarrito" th:text="${totalCarrito}">0</span></strong>
     </div>
-    <form th:action="@{/clientes/pagosUsuarios}" method="post">  
+    <form th:action="@{/clientes/polizasUsuarios}" method="post">  
       <button id="btnFinalizarCompra">Finalizar compra</button>
     </form>
     </section>
