--- a/src/main/resources/templates/administradores/informes.html
+++ b/src/main/resources/templates/administradores/informes.html
@@ -15,10 +15,10 @@
     <nav>
       <ul>
         <li><a th:href="@{dashboard}">Inicio</a></li>
-        <li><a th:href="@{gestionSeguros}">Gestión Seguros</a></li>
+        <li><a th:href="@{registroSeguros}">Gestión Seguros</a></li>
         <li><a th:href="@{gestionClientes}">Gestión Clientes</a></li>
-        <li><a th:href="@{gestionPolizas}" >Gestión Pólizas</a></li>
-        <li><a th:href="@{informes}" class="active">Informes y Estadísticas</a></li>
+        <li><a th:href="@{gestionPolizas}" class="active">Gestión Pólizas</a></li>
+        <li><a th:href="@{informes}">Informes y Estadísticas</a></li>
         <li><a th:href="@{registroAdministrador}">Registrar Administradores</a></li>
       </ul>
     </nav>
