--- a/src/main/resources/templates/administradores/registroAdministrador.html
+++ b/src/main/resources/templates/administradores/registroAdministrador.html
@@ -39,8 +39,11 @@
       <input type="password" name="password2" required/>
 
       <button type="submit">Registrarse</button>
-      <p class="link">¿Ya tienes cuenta? <a href="index.html">Inicia sesión aquí</a></p>
     </form>
+    <br>
+    <a th:href="@{dashboard}"><button type="button" >Regresar al Dashboard</button></a>
+        
+
   </div>
 
     <!--
